--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,17 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Labo06 - 2 args",
+            "name": "launcher",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": [ "225/55R17"],
+            "program": "${fileDirname}/app",
+            "args": [
+                "il",
+                "fait",
+                "gris",
+                "sur",
+                "Yverdon"
+            ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
@@ -22,28 +28,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "C/C++: gcc-6 build active file",
-            "miDebuggerPath": "/usr/bin/gdb"
-        },
-        {
-            "name": "Labo06 - 3 args",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": [ "225/55R17", "23"],
-            "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                }
-            ],
-            "preLaunchTask": "C/C++: gcc-6 build active file",
+            "preLaunchTask": "build app in active directory",
             "miDebuggerPath": "/usr/bin/gdb"
         }
     ]
